Auth service configs